# micro_url

./: .env  .gitignore  Cargo.toml  link.sqlite  readme.md
migrations/2023-04-24-084235_create_posts/: up.sql
src/: errors.rs  lib.rs  main.rs  models.rs  schema.rs  sql.rs
