[package]
name = "micro_url"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.16"
tokio = { version = "1.27.0", features = ["full"] }
diesel = { version="2.0.0", features= ["sqlite","r2d2"] } 
dotenvy = "0.15.7"
rand = "0.8.5"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"